--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+<link rel="stylesheet" href="index.css">
     <head>
         <meta charset="UTF-8">
         <title>何度目かのHTML</title>
