add index.html index.css

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
         <title>何度目かのHTML</title>
     </head>
     <body>
-        <h1>Webテク</h1>
-        <ul>
-            <li>箇条書き1</li>
-            <li>箇条書き2</li>
-            <li>箇条書き3</li>
-        </ul>
-        <footer>@2021 Tsuyoshi Hine</footer>
+        <div class="container">
+            <div class="starter-template">
+                <h1>Webテク</h1>
+                <ul>
+                   <li>箇条書き1</li>
+                    <li>箇条書き2</li>
+                    <li>箇条書き3</li>
+                </ul>
+                <footer>@2021 Tsuyoshi Hine</footer>
+            </div>
+        </div>
     </body>
 </html>
