add index.html index.css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-    
+
 <link rel="stylesheet" href="index.css">
     <head>
         <meta charset="UTF-8">
@@ -16,6 +16,8 @@
                     <li>箇条書き2</li>
                     <li>箇条書き3</li>
                 </ul>
+                <h2>自己紹介</h2>
+                <p>武蔵野大学データサイエンス学部データサイエンス学科の日根剛といいます。神奈川県出身です。HTMLと CSSの勉強をしています。好きなことはゲームです。よく友人と一緒にやります。趣味はサイクリングです。大和というところから江ノ島までの間をよく移動しています。よろしくお願いします。</p>
                 <footer>@2021 Tsuyoshi Hine</footer>
             </div>
         </div>
