--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <head>
         <meta charset="UTF-8">
         <title>何度目かのHTML</title>
+        <!-- Bootstrap -->
+	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
     </head>
 
     <body>
@@ -21,5 +24,9 @@
                 <footer>@2021 Tsuyoshi Hine</footer>
             </div>
         </div>
+        <!-- /.container -->
+
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     </body>
 </html>
