index.html version up.

--- a/index.html
+++ b/index.html
@@ -14,13 +14,27 @@
         <div class="container">
             <div class="starter-template">
                 <h1>Webテク</h1>
+                
+                <h2>氏名</h2>
+                <p>日根 剛</p>
+
+                <h2>所属</h2>
+                <p>長谷川PJ</p>
+
+                <h2>スキル</h2>
+                <p>Python</p>
+
+                <h2>興味</h2>
                 <ul>
-                   <li>箇条書き1</li>
-                    <li>箇条書き2</li>
-                    <li>箇条書き3</li>
-                </ul>
-                <h2>自己紹介</h2>
-                <p>武蔵野大学データサイエンス学部データサイエンス学科の日根剛といいます。神奈川県出身です。HTMLと CSSの勉強をしています。好きなことはゲームです。よく友人と一緒にやります。趣味はサイクリングです。大和というところから江ノ島までの間をよく移動しています。よろしくお願いします。</p>
+                    <li>webサイト作成</li>
+                     <li>数学</li>
+                     <li>物理</li>
+                 </ul>
+
+                 <h2>製作物</h2>
+                 <h3>猫の成長記録</h3>
+                <video src="mov/Cat_movie.mov"controls autoplay></video>
+
                 <footer>@2021 Tsuyoshi Hine</footer>
             </div>
         </div>
@@ -28,5 +42,9 @@
 
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    
+        <footer>
+            Copyright &copy; Tsuyoshi Hine. ALL Rights Reserved.
+        </footer>
     </body>
 </html>
