--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
                 <h2>製作物</h2>
                 <h3>猫の成長記録</h3>
+                <p>メディアクリエーション・データデザイン演習2より</p>
                 <video src="mov/Cat_movie.mov"controls autoplay height="400"></video>
 
                 <footer>@2021 Tsuyoshi Hine</footer>
