--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p>メディアクリエーション・データデザイン演習2より</p>
                 <video src="mov/Cat_movie.mov"controls autoplay height="400"></video>
 
-                <footer>@2021 Tsuyoshi Hine</footer>
+                <a class="button" href="https://github.com/s2022027" target="_blank">githubページ</a>
             </div>
         </div>
         <!-- /.container -->
