--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h2>製作物</h2>
                 <h3>猫の成長記録</h3>
                 <p>メディアクリエーション・データデザイン演習2より</p>
-                <video src="mov/Cat_movie.mov"controls autoplay height="400"></video>
+                <video class="video-responsive center-block" src="mov/Cat_movie.mov"controls autoplay height="400"></video>
 
                 <a class="button" href="https://github.com/s2022027" target="_blank">githubページ</a>
 
