--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h3>猫の成長記録</h3>
                 <p>メディアクリエーション・データデザイン演習2より</p>
                 
-                <!- <video class="video-responsive center-block" src="mov/Cat_movie.mov"controls autoplay height="400"></video> ->
+                <video class="video-responsive center-block" src="mov/Cat_movie.mov"controls autoplay height="400"></video> 
                 
                 <video class="video-responsive center-block" controls autoplay height="400">
                     <source src="mov/Cat_movie.mov" />
