--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
                     <p> 動画を再生するには、videoタグをサポートしたブラウザが必要です。</p>
                 </video>
 
+                <h3>生物のデータベース作成</h3>
+                <p>未来創造pjより</p>
+
+                <img class="image-responsive center-block" src="img/bird_db.png" alt="鳥のデータベース" width="400" />
+                <img class="image-responsive center-block" src="img/fish_db.png" alt="魚のデータベース" width="400" />                
+
                 <a class="button" href="https://github.com/s2022027" target="_blank">githubページ</a>
 
                 <footer>
