--- a/index.html
+++ b/index.html
@@ -44,7 +44,16 @@
                 <p>未来創造pjより</p>
 
                 <img class="image-responsive center-block" src="img/bird_db.png" alt="鳥のデータベース" width="600" />
-                <img class="image-responsive center-block" src="img/fish_db.png" alt="魚のデータベース" width="600" />                
+                <img class="image-responsive center-block" src="img/fish_db.png" alt="魚のデータベース" width="600" />
+                
+                <h3>指スマゲームを作成</h3>
+                <p>プログラミング発展Aより</p>
+                <a href="https://colab.research.google.com/drive/1oqBq2Cs--7LQ0Y8cY-FR35Qa41nWWIvM?usp=sharing" target="_blank">指スマゲームへのリンク</a>
+                <video class="video-responsive center-block" controls autoplay height="400">
+                    <source src="mov/yubisuma.mov" />
+                    <p> 動画を再生するには、videoタグをサポートしたブラウザが必要です。</p>
+                </video>
+
 
                 <a class="button" href="https://github.com/s2022027" target="_blank">githubページ</a>
 
