--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <a class="button" href="https://github.com/s2022027" target="_blank">githubページ</a>
 
                 <footer>
-                    Copyright &copy; 2021 Tsuyoshi Hine
+                    &copy; 2021 Tsuyoshi Hine
                 </footer>
             </div>
         </div>
