--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p>日根 剛</p>
 
                 <h2>所属</h2>
-                <p>長谷川PJ</p>
+                <p>圓崎PJ</p>
 
                 <h2>スキル</h2>
                 <p>Python</p>
@@ -80,7 +80,7 @@
                 <ul>
                     <li>GoogleColaboratoly</li>
                     <li>Python</li>
-                    <li>初めて遊ぶ人にも分かりやすくなるよう、説明や指の残り本数などを多く入れました。</li>
+                    <li>初めて遊ぶ人にも分かりやすくなるよう、説明や指の残り本数などを入れました。</li>
                 </ul>
 
                 <a href="https://colab.research.google.com/drive/1oqBq2Cs--7LQ0Y8cY-FR35Qa41nWWIvM?usp=sharing" target="_blank">指スマゲームへのリンク</a>
