--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="index.css">
     <head>
         <meta charset="UTF-8">
-        <title>ポートフォリオ 2022027 日根 剛</title>
+        <title>ポートフォリオ 日根 剛</title>
         <!-- Bootstrap -->
 	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     </head>
@@ -45,7 +45,7 @@
 
                 <h2>興味</h2>
                 <ul>
-                    <li>webサイト作成</li>
+                    <li>Webサイト作成</li>
                      <li>データベース作成</li>
                      <li>アプリ作成</li>
                 </ul>
@@ -56,7 +56,7 @@
                 <ul>
                     <li>Processing</li>
                     <li>Python</li>
-                    <li>初めはマウスを動かすことで写真を変更できるようにしていたのですが、扱いやすくするために日付をクリックすることで写真を変更できるようにしました。</li>
+                    <li>初めはマウスを動かすことで写真を変更できるようにしていたのですが、扱いやすくするために日付をクリックすることで写真を変更できるように工夫しました。</li>
                 </ul>
                  
                 <video class="video-responsive center-block" controls autoplay height="400">
