--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		<h4>使用したもの・技術・工夫したところ・改善点</h4>
 		<ul>
 			<li>Unity</li>
-			<li>Python<li>
+			<li>Python</li>
 			<li>動物の画像を一枚入れることでその動物の3Dモデルが作成されるものを現在作成しています。完成した際には画像でしか残されていない絶滅動物を3Dで見れるようにしたいと考えています。</li>
 		</ul>
 		<video class="video-responsive center-block" controls autoplay height="400">
