--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h2>氏名</h2>
                 <p>日根 剛</p>
 
-                <h2>所属</h2>
+                <h2>所属研究室</h2>
                 <p>圓崎PJ</p>
 
                 <h2>スキル</h2>
