--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Webテク</a> 
+                    <a class="navbar-brand" href="#">Web</a> 
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
@@ -36,17 +36,24 @@
                 
                 <h2>氏名</h2>
                 <p>日根 剛</p>
+		
+		<h2>大学名・学部名</h2>
+		<p>武蔵野大学・データサイエンス学部</p>
 
                 <h2>所属研究室</h2>
                 <p>圓崎PJ</p>
 
                 <h2>スキル</h2>
-                <p>Python</p>
+		<ul>
+		    <li>Python</li>
+		    <li>HTML</li>
+		    <li>SQL</li>
+		</ul>
 
                 <h2>興味</h2>
                 <ul>
-                    <li>Webサイト作成</li>
-                     <li>データベース作成</li>
+                    <li>ゲーム企画開発</li>
+                     <li>データ分析</li>
                      <li>Unity</li>
                 </ul>
 
