--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@
                     <source src="mov/ChangeTexture.mov" />
                     <p> 動画を再生するには、videoタグをサポートしたブラウザが必要です。</p>
                 </video>
+		
+		<h3>カードゲームシミュレーター</h3>
+		<a href="https://drive.google.com/file/d/1yFR_vVKTwB2X0vYoC18dAiFA6qsC_kpw/view?usp=sharing" target="_blank">こちらから実行動画を見ることができます。</a>
+		<h4>使用したもの・技術・工夫したところ・改善点</h4>
+		<ul>
+			<li>Unity</li>
+			<li>C#</li>
+			<li>Photon</li>
+			<li>実際の対戦に近づけるため、「手札は相手から見えない」「シャッフルができる」「player1とplayer2で視点が変わる」などしています。</li>
+		</ul>
+		<p>※カードゲームシミュレーターは他では公開していません。そのため、プレイすることはできません。</p>
+		<p>※画像引用元<a href="https://www.onepiece-cardgame.com">ワンピースカードゲーム公式サイト</a></p>
 
 
                 <a class="button" href="https://github.com/s2022027" target="_blank">githubページ</a>
