--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			<li>実際の対戦に近づけるため、「手札は相手から見えない」「シャッフルができる」「player1とplayer2で視点が変わる」などしています。</li>
 		</ul>
 		<p>※カードゲームシミュレーターは他では公開していません。そのため、プレイすることはできません。</p>
-		<p>※画像引用元<a href="https://www.onepiece-cardgame.com">ワンピースカードゲーム公式サイト</a></p>
+		<p>※画像引用元<a href="https://www.onepiece-cardgame.com" target="_blank">ワンピースカードゲーム公式サイト</a></p>
 
 
                 <a class="button" href="https://github.com/s2022027" target="_blank">githubページ</a>
