--- a/index.html
+++ b/index.html
@@ -117,14 +117,21 @@
 			<li>Photon</li>
 			<li>実際の対戦に近づけるため、「手札は相手から見えない」「シャッフルができる」「player1とplayer2で視点が変わる」などしています。</li>
 		</ul>
+		    
 		<p>※カードゲームシミュレーターは他では公開していません。そのため、プレイすることはできません。</p>
 		<p>※画像引用元<a href="https://www.onepiece-cardgame.com" target="_blank">ワンピースカードゲーム公式サイト</a></p>
+		    
+		<h4>シャッフルの動画はこちらになります。</h4>
+		<video class="video-responsive center-block" controls autoplay height="400">
+                    <source src="mov/CardShuffle.mov" />
+                    <p> 動画を再生するには、videoタグをサポートしたブラウザが必要です。</p>
+                </video>
 
 
                 <a class="button" href="https://github.com/s2022027" target="_blank">githubページ</a>
 
                 <footer>
-                    &copy; 2022 Tsuyoshi Hine
+                    &copy; 2023 Tsuyoshi Hine
                 </footer>
             </div>
         </div>
