--- a/index.html
+++ b/index.html
@@ -110,6 +110,16 @@
 		
 		<h3>カードゲームシミュレーター</h3>
 		<a href="https://drive.google.com/file/d/1yFR_vVKTwB2X0vYoC18dAiFA6qsC_kpw/view?usp=sharing" target="_blank">こちらから実行動画を見ることができます。</a>
+		<p>以下は動画に登場する盤面です。</p>
+		<img class="image-responsive center-block" src="img/AreaName.png" alt="カードを置く場所の名前" width="600" />
+		<p>動画では以下のことをしています。</p>
+		<ul>
+			<li>対戦相手とマッチングする。</li>
+			<li>カードを様々なエリアへ移動させる。</li>
+			<li>手札のカードを山札に戻してシャッフルする。</li>
+			<li>キャラの効果で山札の上から5枚見る。(山札から非公開エリアへ移動)</li>
+			<li>ゲームを終了する。</li>
+		</ul>
 		<h4>使用したもの・技術・工夫したところ・改善点</h4>
 		<ul>
 			<li>Unity</li>
@@ -121,7 +131,7 @@
 		<p>※カードゲームシミュレーターは他では公開していません。そのため、プレイすることはできません。</p>
 		<p>※画像引用元<a href="https://www.onepiece-cardgame.com" target="_blank">ワンピースカードゲーム公式サイト</a></p>
 		    
-		<h4>シャッフルの動画はこちらになります。</h4>
+		<h4>詳しいシャッフルの動画はこちらになります。</h4>
 		<video class="video-responsive center-block" controls autoplay height="400">
                     <source src="mov/CardShuffle.mov" />
                     <p> 動画を再生するには、videoタグをサポートしたブラウザが必要です。</p>
