--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		<a href="https://drive.google.com/file/d/1yFR_vVKTwB2X0vYoC18dAiFA6qsC_kpw/view?usp=sharing" target="_blank">こちらから実行動画を見ることができます。</a>
 		<p>以下は動画に登場する盤面です。</p>
 		<img class="image-responsive center-block" src="img/AreaName.png" alt="カードを置く場所の名前" width="600" />
-		<p>動画では以下のことをしています。</p>
+		<h4>動画では以下のことをしています。</h4>
 		<ul>
 			<li>対戦相手とマッチングする。</li>
 			<li>カードを様々なエリアへ移動させる。</li>
