--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                     <source src="mov/CardShuffle.mov" />
                     <p> 動画を再生するには、videoタグをサポートしたブラウザが必要です。</p>
                 </video>
+		<h5>「山札の上へ」のボタンで山札の一番下にあるカードを一番上に置いています。「山札の下へ」のボタンで山札の一番上にあるカードを一番下に置いています。</h5>
 
 
                 <a class="button" href="https://github.com/s2022027" target="_blank">githubページ</a>
