--- a/index.html
+++ b/index.html
@@ -104,15 +104,17 @@
 		<img class="image-responsive center-block" src="img/zoolist.png" alt="動物園水族館一覧一部" width="600" />
 		
 		
-		<h3>自動3Dモデル作成システム(仮名)(現在作成中)</h3>
+		<h3>3Dモデル・テクスチャ自動生成システム(仮名)(現在作成中)</h3>
 		<h4>使用したもの・技術・工夫したところ・改善点</h4>
 		<ul>
 			<li>Unity</li>
+			<li>C#</li>
 			<li>Python</li>
-			<li>動物の画像を1枚入れることでその動物の3Dモデルが作成されるものを現在作成しています。完成した際には画像でしか残されていない絶滅動物を3Dで見れるようにしたいと考えています。</li>
+			<li>動物の画像を1枚入れることでその動物の3Dモデル,テクスチャが生成されるものを現在作成しています。完成した際には画像でしか残されていない絶滅動物を3Dで見れるようにしたいと考えています。</li>
+			<li>現在、ヘビの3Dモデルに動物のテクスチャを貼り付けられるところまで完成しています。</li>
 		</ul>
 		<video class="video-responsive center-block" controls autoplay height="400">
-                    <source src="mov/ChangeTexture.mov" />
+                    <source src="mov/TextureCreateTest.mp4" />
                     <p> 動画を再生するには、videoタグをサポートしたブラウザが必要です。</p>
                 </video>
 		
