--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<li>C#</li>
 			<li>Python</li>
 			<li>動物の画像を1枚入れることでその動物の3Dモデル,テクスチャが生成されるものを現在作成しています。完成した際には画像でしか残されていない絶滅動物を3Dで見れるようにしたいと考えています。</li>
-			<li>現在、ヘビの3Dモデルに動物のテクスチャを貼り付けられるところまで完成しています。</li>
+			<li>現在、「画像を選択→テクスチャを生成→ヘビのモデルに貼り付け」まで完成しています。</li>
 		</ul>
 		<video class="video-responsive center-block" controls autoplay height="400">
                     <source src="mov/TextureCreateTest.mp4" />
