--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                     <source src="mov/TextureCreateTest.mp4" />
                     <p> 動画を再生するには、videoタグをサポートしたブラウザが必要です。</p>
                 </video>
+		<a href="https://drive.google.com/file/d/1vAD5RZiu_tvUNzNdCW42Lw6-FngTvmPB/view?usp=sharing"> target="_blank">こちらから中間発表で使用した資料を見ることができます。</a>
 		
 		<h3>カードゲームシミュレーター</h3>
 		<a href="https://drive.google.com/file/d/1yFR_vVKTwB2X0vYoC18dAiFA6qsC_kpw/view?usp=sharing" target="_blank">こちらから実行動画を見ることができます。</a>
