--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		<img class="image-responsive center-block" src="img/zoolist.png" alt="動物園水族館一覧一部" width="600" />
 		
 		
-		<h3>3Dモデル・テクスチャ自動生成システム(仮名)(現在作成中)</h3>
+		<h3>絶滅動物の3Dモデルのためのテクスチャ自動生成システム(現在卒業研究として作成中)</h3>
 		<h4>使用したもの・技術・工夫したところ・改善点</h4>
 		<ul>
 			<li>Unity</li>
